@@ -4,6 +4,11 @@ Changelog
 Version 1.11 - unreleased
 -------------------------
 
+* In plone2.5_theme: when the skinname is empty, replace it with a
+  default text, otherwise adding a Plone Site will throw an error when
+  displaying the extension profiles.
+  [maurits]
+
 * Added note to profiles.zcml of plone2.5_theme that
   five.registerPackage needs Five version 1.4.
   [maurits]
